--- a/Session2.2/index.html
+++ b/Session2.2/index.html
@@ -204,7 +204,7 @@ where the first term refers to the intercept and the second to the spatial effec
 +   data = list(y = SPDEtoy$y),
 +   A = list(1, A.est6),
 +   effects = list(intercept = rep(1,nrow(SPDEtoy)),
-+                  i = 1:spde$n.spde),
++                  spatial.field = 1:spde$n.spde),
 +   tag="est") 
 ```
   
@@ -213,7 +213,7 @@ Note that the function `inla.stack()` will take care of eliminating any column i
 2\. Define the `formula` by specifying an explicit intercept:
 
 ```r
-&gt; formula = y ~ -1 + intercept + f(i, model = spde)
+&gt; formula = y ~ -1 + intercept + f(spatial.field, model = spde)
 ```
 
 3\. Run `inla`! The function `inla.stack.data()` and `inla.stack.A()` are used for extracting the data and the projector matrix from the `stack.est` object:
@@ -235,30 +235,24 @@ The output is exactly equal to the one presented in Section 2.1. The same poster
 
 
 ```r
-&gt; output6$summary.fixed
+&gt; output6$summary.fixed[,c("mean","0.025quant","0.975quant")]
 ```
 
 ```
-              mean        sd 0.025quant 0.5quant 0.975quant     mode
-intercept 9.499583 0.7635167   7.883433 9.519599   11.00359 9.551597
-                  kld
-intercept 8.27817e-07
+              mean 0.025quant 0.975quant
+intercept 9.499583   7.883433   11.00359
 ```
 
 
 ```r
-&gt; output6$summary.hyperpar
+&gt; output6$summary.hyperpar[,c("mean","0.025quant","0.975quant")]
 ```
 
 ```
-                                             mean        sd 0.025quant
-Precision for the Gaussian observations  2.561461 0.4013452   1.857745
-Theta1 for i                            -3.954332 0.1592915  -4.259786
-Theta2 for i                             1.997811 0.2472807   1.493527
-                                         0.5quant 0.975quant      mode
-Precision for the Gaussian observations  2.532240   3.435166  2.476840
-Theta1 for i                            -3.957560  -3.632403 -3.969695
-Theta2 for i                             2.004648   2.466993  2.030469
+                                             mean 0.025quant 0.975quant
+Precision for the Gaussian observations  2.561461   1.857745   3.435166
+Theta1 for spatial.field                -3.954332  -4.259786  -3.632403
+Theta2 for spatial.field                 1.997811   1.493527   2.466993
 ```
 
 ---
@@ -271,16 +265,15 @@ Theta2 for i                             2.004648   2.466993  2.030469
 - It is possible to perform the spatial prediction jointly with the estimation by using the  `inla.stack` approach.
 
 &lt;span style="display:block; margin-top: 20px ;"&gt;&lt;/span&gt;
-- Consider the following distribution for the response variable: 
+- Consider the response variable distribution
 $$
 \bm y\sim\text{Normal}(\bm\eta=\bm 1 b_0+\bm A\tilde{\bm \xi},\sigma^2_e \bm I)
 $$
-In particular, it is possible to obtain the posterior distribution of the linear predictor `\(\bm\eta\)` everywhere in space, especially where we don't have observed data and `y=NA`.
+we are interested in the posterior distribution of the linear predictor `\(\bm\eta\)` everywhere in space, especially where we don't have observed data and `y=NA`.
 
 &lt;span style="display:block; margin-top: 20px ;"&gt;&lt;/span&gt;
 - With regard to spatial prediction, it is worth noting that the INLA-SPDE algorithm provides the posterior conditional distribution of `\(\bm\eta\)` for all the triangulation vertices.
-By using the SPDE approximation, it is then immediate to get a prediction for `\(\bm\eta\)` for any location in the triangulated
-domain.
+By using the SPDE approximation, it is then immediate to get a prediction for `\(\bm\eta\)` for any location in the triangulated domain (i.e. the posterior predictive distribution).
 
 ---
 
@@ -322,7 +315,7 @@ For performing **jointly** the estimation and the prediction, we create a new `i
 *&gt; stack.pred &lt;- inla.stack(data = list(y = NA),
 +          A = list(1, A.pred6),
 +          effects = list(intercept = rep(1, nrow(pred.grid)),
-+                         i = 1:spde$n.spde),
++                         spatial.field = 1:spde$n.spde),
 +          tag = "pred") 
 ```
 and then we join it to the `inla.stack` object created previously for the estimation (`stack.est`):
@@ -349,7 +342,7 @@ The option `return.marginals.predictor=TRUE` is necessary to obtain the marginal
 To access the predictions (posterior summary stats or marginal distribution) at the target grid locations, we extract with the `inla.stack.index()` function the corresponding indexes from the full stack object using the corresponding tag set before (`pred`):
 
 ```r
-&gt; index.pred &lt;- inla.stack.index(join.stack, tag="pred")$data
+&gt; index.pred &lt;- inla.stack.index(join.stack, tag = "pred")$data
 &gt; length(index.pred)
 ```
 
@@ -360,17 +353,17 @@ To access the predictions (posterior summary stats or marginal distribution) at 
 We then extract the prediction posterior mean and sd at the first 3 grid points:
 
 ```r
-&gt; output6pred$summary.fitted.values[index.pred[1:3],c("mean","sd")]
+&gt; output6pred$summary.linear.predictor[index.pred[1:3],c("mean","sd")]
 ```
 
 ```
-                          mean        sd
-fitted.APredictor.201 12.27545 0.2676053
-fitted.APredictor.202 11.95982 0.3700679
-fitted.APredictor.203 10.57788 0.4510318
+                   mean        sd
+APredictor.201 12.27573 0.2676557
+APredictor.202 11.95927 0.3699636
+APredictor.203 10.57941 0.4512633
 ```
 
-In this case (identity link) `output6pred$summary.linear.predictor` would return the same output.
+In this case (identity link) `output6pred$summary.fitted.values` would return the same output.
 
 ---
 
@@ -382,7 +375,7 @@ As described in Day 1, it is possible to manipulate marginal distributions.
 Consider for example the first grid point and its posterior predictive distribution:
 
 ```r
-&gt; distr.point1 = output6pred$marginals.fitted.values[index.pred[1]][[1]]
+&gt; distr.point1 = output6pred$marginals.linear.predictor[index.pred[1]][[1]]
 &gt; distr.point1.smooth = inla.smarginal(distr.point1)
 ```
 
@@ -400,7 +393,7 @@ We can be also interested in computing the posterior probability of getting a va
 ```
 
 ```
-[1] 0.00355769
+[1] 0.003577228
 ```
 
 ]
@@ -426,7 +419,7 @@ We plot now the posterior mean of the linear predictor at the grid level.
 &gt; library(inlabru)
 &gt; post.mean.pred = output6pred$summary.linear.predictor[index.pred,"mean"]
 &gt; post.mean.df = SpatialPixelsDataFrame(SpatialPoints(pred.grid),
-+                                         data = data.frame(post.mean.pred))
++                                       data = data.frame(post.mean.pred))
 &gt; 
 &gt; 
 &gt; library(viridis)
@@ -518,9 +511,7 @@ The function for fitting the model is called `bru()`:
 &gt; library(inlabru)
 &gt; 
 &gt; bru(components = ...,
-+     formula = ...,
-+     family = ...,
-+     data = ..., #data.frame or sp spatial object
++     ..., 
 +     options = list(...)
 +     )
 ```
@@ -530,43 +521,10 @@ where
 - `components` is a formula-like specification of the model components
 
 &lt;span style="display:block; margin-top: 10px ;"&gt;&lt;/span&gt; 
-- `formula` specifies how the `components` are combined to create the linear predictor. It is not required when the linear predictor is the sum of all the terms in `components`.
-
-
- &lt;span style="display:block; margin-top: 10px ;"&gt;&lt;/span&gt; 
-- `family` (string) specifies the probability density function (PDF) of the response. All family types supported by the `INLA` package are supported by `inlabru`.
+- `...` requires the specification of the likelihood and of the data. This will be done using the function `like`.
 
 &lt;span style="display:block; margin-top: 10px ;"&gt;&lt;/span&gt; 
-- When running the `bru` some options are set (for example `control.compute$dic=TRUE`): see all of them with `bru_options_default()`. With `options` we can for example specify `E` or `control.fixed`.
-
----
-
-# The `inlabru` model components
-
-- Similarly to INLA the model is defined by means of a `formula`-lime specification of the linear predictor components which include both fixed effects and random effects (RE). 
-
-&lt;span style="display:block; margin-top: 20px ;"&gt;&lt;/span&gt;
-- The function `f()` used with `INLA` is replaced by an **arbitrary name** which is assigned to the effect. For example consider a model with a linear prediction including an intercept, the linear effect of a covariate `x` and a generic RE:
-
-
-
-```r
-&gt; y ~ Intercept(1) + x + yourREnane(main = index/covariate, model = "...", ...)
-```
-
-- Note that the specification of an implicit latent intercept is deprecated, and `+ Intercept(1)` or `+1` should be used instead.
-
-- The available `model` specifications are:
-  - `iid`
-  - a spatial effect created previously using `inla.spde2.matern()` or `inla.spde2.pcmatern()`
-  - all the models accepted by the INLA `f()` function.
-
-- The linear effect model of the covariate `x` can also be expressed in the formula as
-
-```r
-&gt; cov(x, model="linear")
-```
-The difference is in the name used in the output: `x` (method 1) or `cov` (method 2).
+- When running the `bru` some options are set (for example `control.compute$dic=TRUE`): see all of them with `bru_options_default()`. With `options` we can for example specify the `inla` `control.fixed` and `control.compute` options.
 
 ---
 
@@ -588,7 +546,40 @@ The function `like()` makes it possible to specify the likelihood and other opti
 ```
 
 where 
-- `formula` is a formula where the right hand side is a general `R` expression defining the predictor used in the model (you will use the arbitrary names adopted for specifying the model components).
+
+- `formula` specifies how the `components` are combined to create the linear predictor (you will use the arbitrary names adopted for specifying the model components). It is not required when the linear predictor is the sum of all the terms in `components`.
+
+
+ &lt;span style="display:block; margin-top: 10px ;"&gt;&lt;/span&gt; 
+- `family` (string) specifies the probability density function (PDF) of the response. All family types supported by the `INLA` package are supported by `inlabru`.
+
+
+---
+
+# The `inlabru` model components
+
+- The function `f()` used with `INLA` is replaced by an **arbitrary name** which is assigned to the effect. For example consider a model with a linear prediction including an intercept, the linear effect of a covariate `x` and a generic random effect:
+
+
+
+```r
+&gt; y ~ Intercept(1) + x + yourREnane(main = index/covariate, model = "...", ...)
+```
+ &lt;span style="display:block; margin-top: 10px ;"&gt;&lt;/span&gt; 
+- Note that the specification of an implicit latent intercept is deprecated, and `+ Intercept(1)` or `+1` should be used instead.
+ &lt;span style="display:block; margin-top: 10px ;"&gt;&lt;/span&gt; 
+- The available `model` specifications are:
+  - `iid`
+  - a spatial effect created previously using `inla.spde2.matern()` or `inla.spde2.pcmatern()`
+  - all the models accepted by the INLA `f()` function.
+
+- The linear effect model of the covariate `x` can also be expressed in the formula as
+
+```r
+&gt; cov(x, model="linear")
+```
+The difference is in the name used in the output: `x` (method 1) or `cov` (method 2).
+
 
 ---
 
@@ -598,56 +589,51 @@ where
 .pull-left[
 
 ```r
-&gt; # Model component
-&gt; cmp1 = y ~ -1 + Intercept(1) + x
+&gt; # Data simulation
+&gt; n1 &lt;- 200
+&gt; x1 &lt;- runif(n1)
+&gt; y1 &lt;- rnorm(n1, mean = 3 + 2 * x1 )
+&gt; df1 &lt;- data.frame(y = y1, x = x1)
 &gt; 
-&gt; fit1 = bru(cmp1,
-+            formula = y ~ x + Intercept, #can be omitted
-+            family = "gaussian",
-+            data = df1)
-&gt; fit1$names.fixed
-```
-
-```
-[1] "Intercept" "x"        
-```
-
-```r
+&gt; library(inlabru)
+&gt; # Model component
+&gt; cmp1 = y ~  Intercept(1) + x
+&gt; 
+&gt; # Likelihood
+&gt; lik1 = like(formula = y ~ x + Intercept,
++             #formula = y ~ ., 
++             family = "gaussian",
++             data = df1)
+&gt; 
+&gt; # Model fit
+&gt; fit1 &lt;- bru(cmp1, lik1)
 &gt; fit1$summary.fixed[,c("mean","sd")]
 ```
 
 ```
               mean        sd
-Intercept 3.008331 0.1314612
-x         2.001839 0.2354460
+Intercept 2.929343 0.1316355
+x         2.092165 0.2345736
 ```
 ]
 .pull-right[
 
 ```r
 &gt; # Model component
-&gt; cmp1 = y ~ -1 + Intercept(1) + x
+&gt; cmp2 = y ~  Intercept(1) + cov(x, model="linear")
 &gt; # Likelihood
-&gt; lik1 = like(formula = y ~ x + Intercept,
+&gt; lik2 = like(formula = y ~ cov + Intercept,
 +             family = "gaussian",
 +             data = df1)
-&gt; 
-&gt; fit1 &lt;- bru(cmp1, lik1)
-&gt; fit1$names.fixed
-```
-
-```
-[1] "Intercept" "x"        
-```
-
-```r
-&gt; fit1$summary.fixed[,c("mean","sd")]
+&gt; # Model fit
+&gt; fit2 &lt;- bru(cmp2, lik2)
+&gt; fit2$summary.fixed[,c("mean","sd")]
 ```
 
 ```
               mean        sd
-Intercept 3.008331 0.1314611
-x         2.001839 0.2354458
+Intercept 2.929343 0.1316354
+cov       2.092165 0.2345734
 ```
 ]
 
@@ -764,19 +750,19 @@ The argument `n.samples` (by default 100) specifies the number of samples to dra
 
 ```
        mean        sd    q0.025    median   q0.975      smin     smax
-1 12.274661 0.2748203 11.750931 12.278165 12.79733 11.362394 13.39194
-2 11.963149 0.3874874 11.229100 11.952300 12.68887 10.722449 12.97105
-3 10.563163 0.4653250  9.664884 10.587198 11.42862  9.187471 12.28969
-4  9.651572 0.3366701  8.987241  9.631168 10.28824  8.608379 10.82990
-5  9.530041 0.3503141  8.877432  9.523253 10.16074  8.377625 10.66705
-6 10.141335 0.3693989  9.385333 10.132141 10.85414  8.838799 11.43901
-          cv       var
-1 0.02238924 0.0755262
-2 0.03239008 0.1501464
-3 0.04405167 0.2165273
-4 0.03488241 0.1133468
-5 0.03675893 0.1227200
-6 0.03642508 0.1364555
+1 12.275674 0.2760780 11.724641 12.282484 12.80222 11.362394 13.39194
+2 11.959937 0.3871687 11.216349 11.959847 12.68980 10.808989 13.21190
+3 10.570787 0.4595346  9.712486 10.578731 11.42872  9.187471 12.28969
+4  9.658574 0.3392025  9.018540  9.641246 10.30965  8.707341 11.08092
+5  9.536028 0.3507209  8.889616  9.528744 10.18288  8.377625 10.66705
+6 10.141288 0.3733778  9.384109 10.128704 10.84638  8.838799 11.43901
+          cv        var
+1 0.02248985 0.07621907
+2 0.03237213 0.14989959
+3 0.04347213 0.21117204
+4 0.03511931 0.11505832
+5 0.03677851 0.12300518
+6 0.03681759 0.13941095
 ```
 
 Note that it is possible to predict any function of any subset of the components of the model specification.
@@ -794,7 +780,7 @@ Note that it is possible to predict any function of any subset of the components
 ```
 ]
 .pull-right[
-&lt;img src="./img/unnamed-chunk-36-1.png" &gt;
+&lt;img src="./img/unnamed-chunk-35-1.png" &gt;
 ]
 
 ---
@@ -811,7 +797,7 @@ Note that it is possible to predict any function of any subset of the components
 ```
 ]
 .pull-right[
-&lt;img src="./img/unnamed-chunk-37-1.png" &gt;
+&lt;img src="./img/unnamed-chunk-36-1.png" &gt;
 ]
 
 
